product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: product
spec:
  replicas: 3 # number of replicas to create
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product-cont
        image: acrammarpoc.azurecr.io/product:latest # replace with your web API image name
        imagePullPolicy: IfNotPresent # pull image only if it doesn't exist
        ports:
          - containerPort: 5000
            protocol: TCP
