service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
