ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: product
            port:
              number: 80
        pathType: Exact
