ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matman-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: matman.fluor.com
    http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 3551
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3552
      - path: /usermgmt
        pathType: Prefix
        backend:
          service:
            name: usermgmt-service
            port:
              number: 3553
      # paths:
      # - path: /example
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: example-service
      #       port:
      #         name: http

#============
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-nginx
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
# spec:
#   rules:
#   - host: matman.fluor.com
#     http:
#       paths:
#       - path: /orders
#         backend:
#           serviceName: order-service
#           servicePort: 3551
#       - path: /products
#         backend:
#           serviceName: product-service
#           servicePort: 3551
