ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matman-poc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 3551
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3552
      - path: /usermgmt
        pathType: Prefix
        backend:
          service:
            name: usermgmt-service
            port:
              number: 3553
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-app-service
            port:
              number: 3547
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matman-poc-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: product
            port: 
              number: 3551
