ingress3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ammar-poc-ingress
  namespace: ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
  # - http:
  #     paths:
  #     - path: /order
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: order-service
  #           port:
  #             number: 5035
  # - http:
  #     paths:
  #     - path: /usermgmt
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: usermgmt-service
  #           port:
  #             number: 5037
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: angular-app-service
  #           port:
  #             number: 80
